# Simulation

./: CMakeLists.txt
MATLAB/Integration/: NumericalIntegration.m
MATLAB/Kinematics/: Kinematics.m  KinematicsHW.tex
MATLAB/Kinematics3/: K3.m
MATLAB/RBD/: NewtonEuler.m  Simulate.m  calc_inertia.m
MATLAB/RestingContact/: CFRestingContact.m
include/Sim/: Collision.h  Common.h  Integration.h  Log.h  RigidBodyDynamics.h  Simulation.h
src/: Collision.cpp  Integration.cpp  RigidBodyDynamics.cpp  Simulation.cpp
